navegacion more-activity

--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -36,7 +36,7 @@
                             <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="40" alt=""/></h:link></li>
                             <li uk-tooltip="title: #{alumno['activity']}; pos: right" ><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="40" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="40" alt="" /></h:link></li>
-                            <li uk-tooltip="title: Indefinido; pos: right"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="40" alt="" /></li>
+                            <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="40" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="40" height="" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="40" alt="" /></h:link></li>
                         </ul>
@@ -69,7 +69,7 @@
                 <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></li>
+                <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
             </ul>
@@ -79,7 +79,7 @@
                 <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="50" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="50" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt="" /></li>
+                <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" height="" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt="" /></h:link></li>
             </ul>
