se dan estilos generales

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -103,7 +103,9 @@
                                         <div id="#{tareaActvidadModelo.idActividad}" class="videoPlayer"></div>
                                     </h:panelGroup>
                                 </div>
-                                <div class="uk-card-body">Please watch the full video!</div>
+                                <div class="uk-card-body">
+                                    <div class="uk-text-center mensaje1"><span class="mensaje1-1">Please watch the<br/>full video!</span></div>
+                                </div>
                                 <div  class="uk-card-footer">
                                     <h:form>
                                         <h:commandLink  action="#{tareaGramaticaControlador.incrementaReporduccion(1, tareaActvidadModelo.id)}" style="display: none">
