--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -97,7 +97,7 @@
                             <h1 class="lescuadron uk-text-center letra-titulo">Order Sentences</h1>
                             <h:panelGroup layout="block" styleClass="uk-container padding-contenedor contenedor-oraciones uk-sortable "  pt:uk-sortable="">
                                 <div class="oraciones">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, obcaecati!
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, obcaecati sdfsdf!
                                 </div>
                                 <div class="oraciones">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, eius expedita illo, incidunt inventore ipsa libero natus neque quo repellendus soluta sunt tempore vel, vitae.
