--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -29,8 +29,8 @@
                             <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="40" alt=""/></h:link></li>
                             <li uk-tooltip="title: #{alumno['activity']}; pos: right" ><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="40" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="40" alt="" /></h:link></li>
-                            <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="40" alt="" /></h:link></li>
-                            <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="40" height="" alt="" /></h:link></li>
+                            <li uk-tooltip="title: Indefinido; pos: right" class="uk-active"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="40" alt="" /></h:link></li>
+                            <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" ><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="40" height="" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="40" alt="" /></h:link></li>
                         </ul>
 
@@ -62,8 +62,8 @@
                 <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
+                <li uk-tooltip="title: Indefinido; pos: right" class="uk-active"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" ><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
             </ul>
         </div>
@@ -72,8 +72,8 @@
                 <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['activity']}; pos: right"><h:link outcome="activity"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="50" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="glossary"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="50" alt="" /></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt="" /></h:link></li>
-                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" class="uk-active"><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" height="" alt="" /></h:link></li>
+                <li uk-tooltip="title: Indefinido; pos: right" class="uk-active"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt="" /></h:link></li>
+                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" ><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" height="" alt="" /></h:link></li>
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt="" /></h:link></li>
             </ul>
         </div>
@@ -161,23 +161,38 @@
                         </li>
                         <li class="talking" >
                             <h1 class="lescuadron uk-text-center letra-titulo">Habla con tu pareja</h1>
-                            <div class="uk-grid" uk-grid="">
-                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
-                                    <div class="rombo color-uno"></div>
-                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
-                                </div>
-                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
-                                    <div class="rombo color-dos"></div>
-                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
-                                </div>
-                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
-                                    <div class="rombo color-tres"></div>
-                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
-                                </div>
-                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
-                                    <div class="rombo color-cuatro"></div>
-                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
-                                </div>
+                            <div>
+<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
+<!--                                    <div class="rombo color-uno"></div>-->
+<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
+<!--                                </div>-->
+<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
+<!--                                    <div class="rombo color-dos"></div>-->
+<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
+<!--                                </div>-->
+<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
+<!--                                    <div class="rombo color-tres"></div>-->
+<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
+<!--                                </div>-->
+<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
+<!--                                    <div class="rombo color-cuatro"></div>-->
+<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
+<!--                                </div>-->
+
+                               <div class="fondo-more uk-position-relative">
+                                   <div class="more-uno">
+                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eius, explicabo nesciunt omnis perspiciatis quae quisquam rem rerum suscipit vel?</span>
+                                   </div>
+                                   <div class="more-dos">
+                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corporis delectus ex incidunt labore odit quaerat repudiandae vel voluptatibus voluptatum.</span>
+                                   </div>
+                                   <div class="more-tres">
+                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cupiditate deserunt eveniet ipsam libero magni quaerat ullam voluptas voluptate voluptatibus!</span>
+                                   </div>
+                                   <div class="more-cuatro">
+                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam atque fugiat illo incidunt numquam officiis omnis rem repudiandae sequi voluptatum?</span>
+                                   </div>
+                               </div>
                             </div>
                         </li>
 
