--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -33,7 +33,6 @@
                             <li uk-tooltip="title: #{alumno['mind.map']}; pos: right" ><h:link outcome="select-mindmap"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="40" height="" alt="" /></h:link></li>
                             <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="free-library"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="40" alt="" /></h:link></li>
                         </ul>
-
                     </div>
                 </div>
             </nav>
@@ -92,26 +91,20 @@
 
                     </ul>
 
-                    <ul class="js-filter" style="list-style: none" >
+                    <ul class="js-filter" style="list-style: none">
                         <li class="ordenar">
-                            <h1 class="lescuadron uk-text-center letra-titulo">Order Sentences</h1>
-                            <h:panelGroup layout="block" styleClass="uk-container padding-contenedor contenedor-oraciones uk-sortable "  pt:uk-sortable="">
-                                <div class="oraciones">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, obcaecati sdfsdf!
-                                </div>
-                                <div class="oraciones">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, eius expedita illo, incidunt inventore ipsa libero natus neque quo repellendus soluta sunt tempore vel, vitae.
-                                </div>
-                                <div class="oraciones">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime molestias perferendis soluta tempore.
-                                </div>
-                                <div class="oraciones">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                </div>
-                                <div class="oraciones">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur?
-                                </div>
-                            </h:panelGroup>
+                            <h:form>
+                                <h1 class="lescuadron uk-text-center letra-titulo">Order Sentences</h1>
+                                <h:panelGroup layout="block" styleClass="uk-container padding-contenedor contenedor-oraciones uk-sortable "  pt:uk-sortable="">
+                                    <ui:repeat value="#{tareaOracionesControlador.desordena()}" var="oracion">
+                                        <div class="oraciones">#{oracion.oracionesModelo.oracion}</div>
+                                    </ui:repeat>
+                                </h:panelGroup>
+                                <h:inputHidden id="tareaOraciones" value="#{tareaOracionesControlador.respuestaOraciones}"/>
+                                <h:commandButton style="" styleClass="uk-button uk-button-primary uk-margin" value="Submit answer">
+                                    <f:ajax listener="#{tareaOracionesControlador.llenaDatos()}" execute="@form"/>
+                                </h:commandButton>
+                            </h:form>
                         </li>
                         <li class="relacion-imagen" >
                             <h1 class="lescuadron uk-text-center letra-titulo">Matching words</h1>
@@ -202,6 +195,9 @@
 
             </div>
         </div>
+        <script type="application/javascript">
+            document.querySelectorAll('oraciones');
+        </script>
     </ui:define>
 </ui:composition>
 </html>
