--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -91,12 +91,20 @@
             <div class="uk-container padding-contenedor">
                 <h:panelGroup layout="block" id="filtro-seleccion" pt:uk-filter="target: .js-filter">
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center "  >
-                        <li uk-filter-control=".transcrip" uk-tooltip="Video" class="uk-active uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70"  alt="" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".transcrip" uk-tooltip="Video" class="uk-active uk-animation-toggle" tabindex="0" data-respuesta="#{empty alumnoControlador.tareaActividadModelo.respuesta ? 'vacio' : 'lleno'}" data-respondiendo="#{alumnoControlador.tareaActividadModelo.resolviendoTranscript}">
+                            <h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70"  alt="" styleClass="uk-border-circle uk-animation-shake"/>
+                        </li>
                         <li uk-filter-control=".match" uk-tooltip="Match" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
                         <li uk-filter-control=".order-words" uk-tooltip="Order Words" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                         <li uk-filter-control=".answer" uk-tooltip="Transcript" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <h:form>
+                            <h:inputHidden value="#{transcripcionControlador.activo}"/>
+                            <h:commandLink style="display: none">
+                                <f:ajax execute="@form" listener="#{transcripcionControlador.cambiaEstatus}" render="@none"/>
+                            </h:commandLink>
+                        </h:form>
                     </ul>
 
                     <ul class="js-filter  uk-text-center" >
@@ -181,13 +189,13 @@
                                 <div>
                                     <div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div>
                                 </div>
-                                <h:panelGroup layout="block" styleClass="" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}">
+                                <h:panelGroup layout="block" styleClass="" rendered="#{empty alumnoControlador.tareaActividadModelo.respuesta}">
                                     <h:panelGroup layout="block" styleClass="uk-sortable contenedor-respuesta" pt:uk-sortable="group: respuesta"/>
                                 </h:panelGroup>
                                 <div class="trancript-contenedor arrastrar scroll-drag uk-text-justify remplazar">
                                     <h:outputText value="#{actividadAlumnoControlador.transcripcion}" escape="false"/>
                                 </div>
-                                <h:outputText value="Respondido" styleClass="realizado movimiento1" rendered="#{empty alumnoControlador.tareaActividadModelo.respuesta}"/>
+                                <h:outputText value="Respondido" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}"/>
                             </h:panelGroup>
                             <h:form>
                                 <h:inputHidden value="#{transcripcionControlador.transcripcion}"/>
@@ -205,6 +213,7 @@
             var videoPlayer = document.querySelectorAll('.scrollFinal');
             var player;
             var totalRespuestasTranscripcion = 0;
+
             function onYouTubeIframeAPIReady() {
                 videoPlayer.forEach(function (video) {
                     console.log(video.dataset.video);
@@ -305,70 +314,8 @@
                     tabla.style.display = 'none';
                 }
             }
-
-            function transcripcionEnvidad(data) {
-                if (data.status === 'success') {
-                    document.querySelector('.uk-container ul li:first-child').setAttribute('uk-filter-control','.transcrip');
-                    data.source.disabled = true;
-                }
-            }
-
-            function validaContenido() {
-                var respuesta = document.querySelector('.answer');
-                if (((respuesta.querySelectorAll('.contenedor-respuesta div').length * 100) / totalRespuestasTranscripcion) &lt; 15.0)  {
-                    resp = '';
-                    respuesta.querySelectorAll('.remplazar p').forEach(function (respRem) {
-                        resp = resp.concat(respRem.innerHTML);
-                        respuesta.querySelector('input[type=hidden]:nth-child(2)').value = resp;
-                    });
-                    return true;
-                }
-                UIkit.modal.alert('Es necesario relacionar más ejercicios');
-                return false;
-            }
-
-            document.querySelector('.uk-container ul li:last-child').addEventListener('click', eventoClickTransciptcion);
-
-            function eventoClickTransciptcion(evento) {
-                UIkit.modal.confirm('Al selecionar esta tarea, no podrá selecciona la actividad de video o ver algun otro transcript.').then(function() {
-                    //OK
-                    document.querySelector('.uk-container ul li:first-child').removeAttribute('uk-filter-control');
-                    document.querySelector('.uk-container ul li:last-child').removeEventListener('click', eventoClickTransciptcion);
-                }, function () {
-                    document.querySelector('.uk-container ul li:first-child').click();
-                })
-            }
-
         </script>
-        <script type="application/javascript">
-            var transcripcion = document.querySelector('.answer');
-            agregaRespuestas(transcripcion.querySelector('.contenedor-respuesta'));
-
-            function agregarImagen() {
-                etiqueta = document.createElement('img');
-                etiqueta.src = "/tecolotl/javax.faces.resource/mounstro/verde.svg.xhtml?ln=img";
-                etiqueta.classList.add("marciano");
-                etiqueta.style.touchAction = "none";
-                return etiqueta;
-            }
-
-            function agregaRespuestas(elemento) {
-                respuestas = [];
-                transcripcion.querySelectorAll('.remplazar .remover').forEach(function (palabra) {
-                    respuestas.push(palabra.textContent);
-                    palabra.setAttribute("uk-sortable","group: respuesta");
-                    palabra.setAttribute('class','uk-sortable respuesta-transcript');
-                    palabra.innerHTML=" ";
-                });
-                totalRespuestasTranscripcion = respuestas.length;
-                revolver(respuestas).forEach(function (resp) {
-                    respuesta = document.createElement('div');
-                    respuesta.classList.add('respuesta-drag');
-                    respuesta.textContent = resp;
-                    elemento.appendChild(respuesta);
-                });
-            }
-        </script>
+        <h:outputScript library="js" name="alumno/transcripcion.js"/>
     </ui:define>
 </ui:composition>
 </html>
