--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -155,35 +155,18 @@
                         <li class="talking" >
                             <h1 class="lescuadron uk-text-center letra-titulo">Habla con tu pareja</h1>
                             <div>
-<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
-<!--                                    <div class="rombo color-uno"></div>-->
-<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
-<!--                                </div>-->
-<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
-<!--                                    <div class="rombo color-dos"></div>-->
-<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
-<!--                                </div>-->
-<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
-<!--                                    <div class="rombo color-tres"></div>-->
-<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
-<!--                                </div>-->
-<!--                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">-->
-<!--                                    <div class="rombo color-cuatro"></div>-->
-<!--                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>-->
-<!--                                </div>-->
-
                                <div class="fondo-more uk-position-relative">
                                    <div class="more-uno">
-                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis eius, explicabo nesciunt omnis perspiciatis quae quisquam rem rerum suscipit vel?</span>
+                                       <h:outputText value="#{hablarControlador.hablarModeloLista[0].tarjeta}"/>
                                    </div>
                                    <div class="more-dos">
-                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corporis delectus ex incidunt labore odit quaerat repudiandae vel voluptatibus voluptatum.</span>
+                                       <h:outputText value="#{hablarControlador.hablarModeloLista[1].tarjeta}"/>
                                    </div>
                                    <div class="more-tres">
-                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cupiditate deserunt eveniet ipsam libero magni quaerat ullam voluptas voluptate voluptatibus!</span>
+                                       <h:outputText value="#{hablarControlador.hablarModeloLista[2].tarjeta}"/>
                                    </div>
                                    <div class="more-cuatro">
-                                       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam atque fugiat illo incidunt numquam officiis omnis rem repudiandae sequi voluptatum?</span>
+                                       <h:outputText value="#{hablarControlador.hablarModeloLista[3].tarjeta}"/>
                                    </div>
                                </div>
                             </div>
