--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -93,15 +93,15 @@
 
                     <ul class="js-filter" style="list-style: none">
                         <li class="ordenar">
-                            <h:form>
+                            <h:form id="tareaOraciones">
                                 <h1 class="lescuadron uk-text-center letra-titulo">Order Sentences</h1>
                                 <h:panelGroup layout="block" styleClass="uk-container padding-contenedor contenedor-oraciones uk-sortable "  pt:uk-sortable="">
                                     <ui:repeat value="#{tareaOracionesControlador.desordena()}" var="oracion">
                                         <div class="oraciones">#{oracion.oracionesModelo.oracion}</div>
                                     </ui:repeat>
                                 </h:panelGroup>
-                                <h:inputHidden id="tareaOraciones" value="#{tareaOracionesControlador.respuestaOraciones}"/>
-                                <h:commandButton style="" styleClass="uk-button uk-button-primary uk-margin" value="Submit answer">
+                                <h:inputHidden id="tareaOracionesInput" value="#{tareaOracionesControlador.respuestaOraciones}"/>
+                                <h:commandButton style="" onclick="getRespuestas()" styleClass="uk-button uk-button-primary uk-margin" value="Submit answer">
                                     <f:ajax listener="#{tareaOracionesControlador.llenaDatos()}" execute="@form"/>
                                 </h:commandButton>
                             </h:form>
@@ -179,7 +179,16 @@
             </div>
         </div>
         <script type="application/javascript">
-            document.querySelectorAll('oraciones');
+            function getRespuestas() {
+                var oracionesDesordenadas = document.querySelectorAll('.oraciones');
+                var respuestas = [];
+                console.log(oracionesDesordenadas);
+                oracionesDesordenadas.forEach(function (value) {
+                    respuestas.push(value.innerHTML);
+                });
+                console.log(respuestas.join('|'));
+                document.getElementById('tareaOraciones:tareaOracionesInput').value = respuestas.join('|');
+            }
         </script>
     </ui:define>
 </ui:composition>
