--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -166,7 +166,7 @@
                                 <ui:repeat value="#{gramaticaControlador.gramaticaModeloLista}" var="gramatica">
                                     <li>
                                         <h:panelGroup layout="block" styleClass="realizado movimiento" rendered="#{not empty gramatica.respuesta}">
-                                            <span>Respondido</span>
+                                                <span>Respondido</span>
                                         </h:panelGroup>
                                         <h:form>
                                             <h:panelGroup layout="block" styleClass="uk-container padding-contenedor estilo-contenedor">
@@ -196,7 +196,7 @@
                                     <h:outputText value="#{actividadAlumnoControlador.transcripcion}" escape="false" rendered="#{empty alumnoControlador.tareaActividadModelo.respuesta}"/>
                                     <h:outputText value="#{alumnoControlador.tareaActividadModelo.respuesta}" escape="false" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}"/>
                                 </div>
-                                <h:outputText value="Respondido" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}"/>
+                                <h:outputText styleClass="realizado movimiento" value="Respondido" rendered="#{not empty alumnoControlador.tareaActividadModelo.respuesta}"/>
                             </h:panelGroup>
                             <h:form>
                                 <h:inputHidden value="#{transcripcionControlador.transcripcion}"/>
