Tareas de ordenar oraciones de forma correcta

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -261,7 +261,7 @@
                         padre = document.createElement('div');
                         hijo = document.createElement('div');
                         hijo.classList.add('palabra','uk-text-center');
-                        hijo.appendChild(document.createTextNode(value1.toLowerCase().replace('.','')));
+                        hijo.appendChild(document.createTextNode(value1.replace('.','')));
                         padre.appendChild(hijo);
                         palabra.nextElementSibling.appendChild(padre);
                     }
