vista completar oracion

--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -87,6 +87,8 @@
                         <li uk-filter-control=".ordenar" uk-tooltip="Order Words" class="uk-animation-toggle uk-active" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                         <li uk-filter-control=".relacion-imagen" uk-tooltip="Relacionar Imagen" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                         <li uk-filter-control=".talking" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".complete-sentences" uk-tooltip="Hablar" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+
                     </ul>
                     <ul class="js-filter" style="list-style: none">
                         <li class="ordenar">
@@ -163,8 +165,35 @@
                                    <div class="more-cuatro">
                                        <h:outputText value="#{hablarControlador.hablarModeloLista[3].tarjeta}"/>
                                    </div>
+
                                </div>
                             </div>
+                        </li>
+                        <li class="complete-sentences">
+                            <h1 class="lescuadron uk-text-center letra-titulo">Complete all Sentences</h1>
+                            <h:panelGroup layout="block" styleClass="uk-sortable contedor-oraciones" pt:uk-sortable="group: oracion">
+                                <div class="respuesta-oracion">palabra</div>
+                                <div class="respuesta-oracion">palabra</div>
+                                <div class="respuesta-oracion">palabra</div>
+                                <div class="respuesta-oracion">palabra</div>
+                            </h:panelGroup>
+                            <div class="oracion-completar">
+                                <ul class="uk-subnav uk-subnav-pill uk-margin-top " uk-switcher="">
+                                    <li><a href="#">1</a></li>
+                                    <li><a href="#">2</a></li>
+                                    <li><a href="#">3</a></li>
+                                    <li><a href="#">4</a></li>
+                                </ul>
+
+                                <ul class="uk-switcher uk-margin">
+                                    <li><p class="uk-text-center">Lorem ipsum dolor sit amet, consectetur . <span class="contenedor-respuesta-oracion uk-sortable" uk-sortable="group: oracion"/> Ad dolorem in nihil obcaecati quod temporibus.</p></li>
+                                    <li><p class="uk-text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span class="contenedor-respuesta-oracion uk-sortable" uk-sortable="group: oracion"/> Ad dolorem in nihil obcaecati quod temporibus.</p></li>
+                                    <li><p class="uk-text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span class="contenedor-respuesta-oracion uk-sortable" uk-sortable="group: oracion"/> Ad dolorem  quod temporibus.</p></li>
+                                    <li><p class="uk-text-center">Lorem ipsum  sit amet, consectetur adipisicing elit. <span class="contenedor-respuesta-oracion uk-sortable" uk-sortable="group: oracion"/> Ad dolorem  quod temporibus obcaecati.</p></li>
+
+                                </ul>
+                            </div>
+
                         </li>
 
                     </ul>
