Properties, activities y activity

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -113,7 +113,7 @@
                                         </h:commandLink>
                                     </h:form>
                                     <h:form styleClass="tam-form">
-                                        <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
+                                        <h:commandButton styleClass="boton" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="#{boton['homework']}"/>
                                     </h:form>
                                 </div>
                             </div>
