--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -73,7 +73,7 @@
                 <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['activity']}; pos: right" class="uk-active"><h:link outcome="actividades"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['glossary']}; pos: right"><h:link outcome="glosario"><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['undefined']}Indefinido; pos: right"><h:link outcome="more-activity"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['mind.map']}; pos: right"><h:link outcome="mapa-mental"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: #{alumno['library']}; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt=""/></h:link></li>
             </ul>
@@ -91,14 +91,14 @@
             <div class="uk-container padding-contenedor">
                 <h:panelGroup layout="block" id="filtro-seleccion" pt:uk-filter="target: .js-filter">
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center "  >
-                        <li uk-filter-control=".transcrip" uk-tooltip="Video" class="uk-active uk-animation-toggle" tabindex="0" data-respuesta="#{empty alumnoControlador.tareaActividadModelo.respuesta ? 'vacio' : 'lleno'}" data-respondiendo="#{alumnoControlador.tareaActividadModelo.resolviendoTranscript}">
+                        <li uk-filter-control=".transcrip" uk-tooltip="#{alumno['bar.icon.video']}" class="uk-active uk-animation-toggle" tabindex="0" data-respuesta="#{empty alumnoControlador.tareaActividadModelo.respuesta ? 'vacio' : 'lleno'}" data-respondiendo="#{alumnoControlador.tareaActividadModelo.resolviendoTranscript}">
                             <h:graphicImage library="img" name="mounstro/morado.svg" width="70" height="70"  alt="" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
-                        <li uk-filter-control=".match" uk-tooltip="Match" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista ? 'none' : 'block'}">
+                        <li uk-filter-control=".match" uk-tooltip="#{alumno['bar.icon.match']}" class="uk-animation-toggle" tabindex="0" style="display: #{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista ? 'none' : 'block'}">
                             <h:graphicImage library="img" name="mounstro/naranja.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/>
                         </li>
-                        <li uk-filter-control=".order-words" uk-tooltip="Order Words" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
-                        <li uk-filter-control=".answer" uk-tooltip="Transcript" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".order-words" uk-tooltip="#{alumno['title.order.words']}" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".answer" uk-tooltip="#{alumno['bar.icon.transcript']}" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                         <h:form>
                             <h:inputHidden value="#{transcripcionControlador.activo}"/>
                             <h:commandLink style="display: none">
@@ -120,14 +120,14 @@
                         </li>
                         <li class="match uk-margin-small-top " value="#{not empty relacionarOracionControlador.tareaRelacionarOracionModeloLista and not empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[0].respuesta}">
                             <h:form id="formulario-relacionar">
-                                <h1 class="uk-text-center lescuadron" style="color: white">Relacionar respuesta</h1>
+                                <h1 class="uk-text-center lescuadron" style="color: white">#{alumno['title.match.sentence']}</h1>
                                 <h:panelGroup layout="block" styleClass="uk-grid padre contenedor-matching" pt:uk-grid="" rendered="#{empty relacionarOracionControlador.tareaRelacionarOracionModeloLista[0].respuesta}">
                                     <div class="columna-pregunta uk-width-expand">
                                         <table id="tabla" class="tabla-ordenar uk-table-middle">
                                             <thead class="titulo-tabla uk-text-center">
                                             <tr>
-                                                <th>Question</th>
-                                                <th>Answer</th>
+                                                <th>#alumno['title.match.sentence.question']}</th>
+                                                <th>#alumno['title.match.sentence.answer']}</th>
                                             </tr>
                                             </thead>
                                             <tbody class="cuerpo-tabla uk-text-center">
