--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -133,7 +133,7 @@
                     <ul class="uk-switcher uk-margin">
                         <ui:repeat value="#{tareasProgresoControlador.tareaActividadModeloLista}" var="actividades" varStatus="contador">
                             #{tareasProgresoControlador.llenaTareas(actividades.id)}
-                            <li>
+                            <li class="uk-margin-medium-left">
                                 <h:panelGroup  styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
                                     <div>
                                         <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
