se arreglan 3 incidencias y mas

--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -153,7 +153,7 @@
                             </h:form>
                         </li>
                         <li class="order-words">
-                            <h1 class="uk-text-center lescuadron" style="color: white">Ordenas las palabras en el orden correspondiente</h1>
+                            <h1 class="uk-text-center lescuadron" style="color: white">Ordena las palabras en el orden correspondiente</h1>
                             <div class="imagen-ordenar">
                                 <h:graphicImage library="img" name="mounstro/whom.svg"/>
                             </div>
